--- a/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
+++ b/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
@@ -2,7 +2,7 @@
   <header class="youtube-header">
     <div class="left-header">
       <div class="logo">
-        <img src="../../../assets/youtube-icon-logo-719479.png" alt="YouTube Logo">
+        <img src="assets/youtube-icon-logo-719479.png" alt="YouTube Logo">
         <span class="app-name">{{ 'APP_NAME' | translate }}</span>
       </div>
       <div class="language-selector">
