update routes images

--- a/everload-front/src/app/components/facebook-downloads/facebook-downloads.component.html
+++ b/everload-front/src/app/components/facebook-downloads/facebook-downloads.component.html
@@ -1,6 +1,6 @@
 <div class="login-split-container">
   <div class="left-panel facebook-panel">
-    <img src="assets/fb sin fondo.png" alt="Facebook Logo" class="left-logo" />
+    <img src="/assets/fb sin fondo.png" alt="Facebook Logo" class="left-logo" />
   </div>
 
   <div class="right-panel">
