--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="home-container">
   <div class="logo-container">
-    <img src="assets/EverLoad home logo.png" alt="" class="everload-logo">
+    <img src="/assets/EverLoad home logo.png" alt="" class="everload-logo">
     <link rel="icon" type="image/png" href="assets/Logo App.png">
 
    <!--  <h1 class="app-name">{{ 'APP_NAME' | translate }}</h1> -->
@@ -10,19 +10,19 @@
 
   <div class="options">
     <a routerLink="/youtube-downloads" class="button youtube-button">
-      <img src="assets/youtube-icon-logo-719479.png" alt="YouTube" class="icon"> {{ 'DOWNLOAD_YOUTUBE' | translate }}
+      <img src="/assets/youtube-icon-logo-719479.png" alt="YouTube" class="icon"> {{ 'DOWNLOAD_YOUTUBE' | translate }}
     </a>
   
     <a routerLink="/twitter-downloads" class="button twitter-button">
-      <img src="assets/twitter-icon.png" alt="Twitter" class="icon"> {{ 'DOWNLOAD_TWITTER' | translate }}
+      <img src="/assets/twitter-icon.png" alt="Twitter" class="icon"> {{ 'DOWNLOAD_TWITTER' | translate }}
     </a>
   
     <a routerLink="/facebook-downloads" class="button facebook-button">
-      <img src="assets/fb sin fondo.png" alt="Facebook" class="icon"> {{ 'DOWNLOAD_FACEBOOK' | translate }}
+      <img src="/assets/fb sin fondo.png" alt="Facebook" class="icon"> {{ 'DOWNLOAD_FACEBOOK' | translate }}
     </a>
   
     <a routerLink="/instagram-downloads" class="button instagram-button">
-      <img src="assets/instagram-icon.png" alt="Instagram" class="icon"> {{ 'DOWNLOAD_INSTAGRAM' | translate }}
+      <img src="/assets/instagram-icon.png" alt="Instagram" class="icon"> {{ 'DOWNLOAD_INSTAGRAM' | translate }}
     </a>
   </div>
   
