--- a/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
+++ b/everload-front/src/app/components/twitter-downloads/twitter-downloads.component.html
@@ -1,6 +1,6 @@
 <div class="login-split-container">
   <div class="left-panel">
-    <img src="assets/twitter logo blck.png" alt="Twitter Logo" class="left-logo" />
+    <img src="/assets/twitter logo blck.png" alt="Twitter Logo" class="left-logo" />
   </div>
 
   <div class="right-panel">
