--- a/everload-front/src/app/components/instagram-downloads/instagram-downloads.component.css
+++ b/everload-front/src/app/components/instagram-downloads/instagram-downloads.component.css
@@ -129,15 +129,12 @@
 @media (max-width: 768px) {
   .login-split-container {
     flex-direction: column;
-    height: auto;
   }
 
-  .left-panel,
-  .right-panel {
-    width: 100%;
+  .left-panel, .right-panel {
     flex: none;
-    height: auto;
-    padding: 20px;
+    width: 100%;
+    height: 50vh;
   }
 
   .left-logo {
@@ -173,4 +170,5 @@
   .language-selector button {
     font-size: 18px;
   }
+
 }
