--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -24,6 +24,9 @@
     <a routerLink="/instagram-downloads" class="button instagram-button">
       <img src="/assets/instagram-icon.png" alt="Instagram" class="icon"> {{ 'DOWNLOAD_INSTAGRAM' | translate }}
     </a>
+    <a routerLink="/spotify-downloads" class="button spotify-button">
+      <img src="/assets/spotify.png" alt="Spotify" class="icon"> {{ 'DOWNLOAD_SPOTIFY' | translate }}
+    </a>
   </div>
   
 
