--- a/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
+++ b/everload-front/src/app/components/youtube-downloads/youtube-downloads.component.html
@@ -3,7 +3,7 @@
     <div class="left-header">
       <div class="logo">
         <img src="/assets/youtube-icon-logo-719479.png" alt="YouTube Logo">
-        <span class="app-name">{{ 'APP_NAME' | translate }}</span>
+        <span class="app-name">{{ 'Youtube' | translate }}</span>
       </div>
       <div class="language-selector">
         <button (click)="changeLanguage('es')">🇪🇸 Español</button>
