add TikTok section link to home page

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -27,6 +27,9 @@
     <a routerLink="/spotify-downloads" class="button spotify-button">
       <img src="assets/Spotify.png" alt="Spotify" class="icon"> {{ 'DOWNLOAD_SPOTIFY' | translate }}
     </a>
+    <a routerLink="/tiktok-downloads" class="button tiktok-button">
+      <img src="/assets/tiktok-icon.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
+    </a>
   </div>
   
 
