add custom TikTok button style with gradient to match branding

--- a/everload-front/src/app/components/home/home.component.html
+++ b/everload-front/src/app/components/home/home.component.html
@@ -28,7 +28,7 @@
       <img src="assets/Spotify.png" alt="Spotify" class="icon"> {{ 'DOWNLOAD_SPOTIFY' | translate }}
     </a>
     <a routerLink="/tiktok-downloads" class="button tiktok-button">
-      <img src="/assets/tiktok-icon.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
+      <img src="/assets/tiktok_logo.png" alt="TikTok" class="icon"> {{ 'DOWNLOAD_TIKTOK' | translate }}
     </a>
   </div>
   
