--- a/everload-front/src/app/components/home/home.component.css
+++ b/everload-front/src/app/components/home/home.component.css
@@ -137,6 +137,14 @@ html, body {
 .spotify-button:hover {
   background-color: #1aa34a;
 }
+.tiktok-button {
+  background: linear-gradient(45deg, #25F4EE, #FE2C55);
+  color: white;
+}
+
+.tiktok-button:hover {
+  filter: brightness(1.1);
+}
 
 
 /* Información del creador */
