updated EverLoad logo with new design

--- a/everload-front/src/app/components/spotify-downloads/spotify-downloads.component.html
+++ b/everload-front/src/app/components/spotify-downloads/spotify-downloads.component.html
@@ -7,7 +7,7 @@
     <div class="spotify-card">
       <h2 class="spotify-title">{{ 'TITLE' | translate }}</h2>
 
-      <p class="subtitle">{{ 'SUBTITLE' | translate }}</p>
+      <p class="Spotify_Subtitle">{{ 'Spotify_Subtitle' | translate }}</p>
 
       <input
         type="text"
