show error message when playlist URL is empty

--- a/everload-front/src/app/components/spotify-downloads/spotify-downloads.component.html
+++ b/everload-front/src/app/components/spotify-downloads/spotify-downloads.component.html
@@ -15,6 +15,7 @@
         [placeholder]="'PLACEHOLDER' | translate"
         class="spotify-input"
       />
+      <p *ngIf="error" class="error-text">❌ {{ error }}</p>
 
       <button class="spotify-button" (click)="descargarListaCanciones()" [disabled]="cargando">
         {{ cargando ? ('LOADING' | translate) : ('SEARCH_BUTTON' | translate) }}
