--- a/everload-front/src/app/components/admin-config/admin-config.component.html
+++ b/everload-front/src/app/components/admin-config/admin-config.component.html
@@ -51,3 +51,9 @@
 
 <button (click)="limpiarTemporales()">🧹 Limpiar temporales</button>
 <p>{{ mensajeLimpieza }}</p>
+
+<button (click)="vaciarHistorial()">🗑️ Vaciar historial</button>
+<p>{{ mensajeVaciarHistorial }}</p>
+
+<button (click)="limpiarLog()">🧽 Limpiar log</button>
+<p>{{ mensajeLogLimpio }}</p>
